[gd_scene load_steps=7 format=3 uid="uid://d3mdpfhbust2f"]

[ext_resource type="Script" uid="uid://dm8ejyy4xlty8" path="res://Scripts/level_map.gd" id="1_8xd6f"]
[ext_resource type="MeshLibrary" uid="uid://dlpq2k8gh7dh0" path="res://Tiles/Tile Library.tres" id="2_2bcta"]

[sub_resource type="Animation" id="Animation_8xd6f"]
resource_name = "FallEnter"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GridMap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(-0.5, 10, -0.5), Vector3(-0.5, -0.5, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridItemHolder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(0, 10.5, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1enw7"]
resource_name = "FallExit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GridMap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 3, 1),
"update": 0,
"values": [Vector3(-0.5, -0.5, -0.5), Vector3(-0.5, -0.5, -0.5), Vector3(-0.5, -40, -0.5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GridItemHolder:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 3, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, -39.5, 0)]
}

[sub_resource type="Animation" id="Animation_2bcta"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GridMap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.5, -0.5, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridItemHolder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1enw7"]
_data = {
&"FallEnter": SubResource("Animation_8xd6f"),
&"FallExit": SubResource("Animation_1enw7"),
&"RESET": SubResource("Animation_2bcta")
}

[node name="LevelMap" type="Node3D"]
script = ExtResource("1_8xd6f")
blockerIndexes = Array[int]([3])
metadata/_custom_type_script = "uid://dm8ejyy4xlty8"

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.5, -0.5, -0.5)
mesh_library = ExtResource("2_2bcta")

[node name="ConnectPoint" type="Marker3D" parent="."]

[node name="FallAnims" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1enw7")
}

[node name="GridItemHolder" type="Node3D" parent="."]
